--- a/src/app/partials/_screen.scss
+++ b/src/app/partials/_screen.scss
@@ -1,5 +1,5 @@
 
-$breakpoint-tablet: 900px;
+$breakpoint-tablet: 1124px;
 $breakpoint-mobile: 750px;
 
 @mixin smallerThan($deviceBreakpoint) {
